# scra-verify

./: .gitignore  .vercelignore  CLAUDE.md  README.md  railway.toml  railway.toml.backup  test-build.sh  vercel.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml  railway-deploy-alternative.yml.example  railway-deploy.yml  test-and-lint.yml
backend/: .env.example  Dockerfile  Dockerfile.simple  csv_processor.py  database.py  main.py  map_scra_flow.sh  pdf_splitter.py  puppeteer_agent.py  pyproject.toml  sample_multi_record.csv  start.sh  supabase_client.py
backend/scripts/: add_indexes.sql  init_supabase.py  schema.sql
frontend/: .env.example  next.config.js  package.json
frontend/.github/workflows/: deploy-backend.yml  deploy-frontend.yml  test-and-lint.yml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/debug-env/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/history/[sessionId]/: page.tsx
frontend/src/app/multi-record/: page.tsx
frontend/src/components/: AppWrapper.tsx  BackendHealthCheck.tsx  Layout.tsx  LoginPage.tsx  RealTimeScreenshots.tsx  SettingsModal.tsx
frontend/src/contexts/: SupabaseAuthContext.tsx
frontend/src/hooks/: useRealTimeVerification.ts
frontend/src/lib/: backend-api.ts  date-utils.ts  supabase.ts  types.ts  validation.ts
