[tool.poetry]
name = "active-duty-automation"
version = "0.1.0"
description = "Military active duty verification automation service using browser-use"
authors = ["Developer"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
browser-use = "*"
playwright = "*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
python-dotenv = "*"
httpx = "*"
supabase = "^2.18.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
